--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,148 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.navBar ul{
+  padding: 15px;
+  margin: 15px;
+  display: flex;
+  list-style: none;
+  border: 2px solid #333333;
+  
+}
+.navBar ul a{
+  text-decoration: none;
+  color: #999;
+  display: block;
+  padding: 15px;
+  margin: 0 5px;
+  
+}
+.navBar ul .active, .navBar ul a:hover{
+  color: #222;
+}
+
+.main_container {
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 100%;
+  height: 100%;
+}
+
+.wrapper {
+  position: relative;
+  display: flex;
+  min-width: 100px;
+}
+
+.search-icon {
+  position: absolute;
+  top: 4px;
+  left: 8px;
+  width: 14px;
+}
+
+.search {
+  border: 1px solid grey;
+  border-radius: 5px;
+  height: 20px;
+  width: 100%;
+  padding: 2px 23px 2px 30px;
+  outline: 0;
+  background-color: #f5f5f5;
+}
+
+.search:hover, .search:focus {
+  border: 1.5px solid  #999;
+  background-color: white;
+}
+
+.video_list {
+  float:left; 
+  width: 40%;
+}
+
+.video_preview {
+  padding-top: 15px;
+  float:right;
+  width: 60%;
+}
+
+.video_item {
+  border-bottom: 1px solid #999;
+  padding: 4px 23px 4px 0px;
+  display: flex !important;
+  align-items: center !important;
+  cursor: pointer;
+  ;
+}
+
+.video_image {
+  max-width: 360px;
+  max-height: 202px ;
+}
+
+.video_title{
+  text-align: top;
+  font-size: 18px;
+  font-family: sans-serif;
+  font-weight: bold;
+}
+
+.video_player{
+  display: block;
+  margin: 0 auto;
+  width: 854px;
+  height: 480px;
+  align-self: center;
+}
+
+.video_preview_info{
+  display: block;
+  margin: 0 auto;
+  width: 854px;
+}
+
+.video_preview_info p{
+  font-family: sans-serif;
+}
+
+.video_preview_title{
+  padding-top: 5px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.video_preview_channel{
+  font-size: 13px;
+}
+
+.video_preview_description{
+  font-size: 16px;
+}
+
+.main_counter_container{
+  margin: 0;
+  position: absolute;
+  top: 20%;
+  left: 20%;
+}
+
+.counter_button{
+  border: 1px solid;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.count {
+  border: 1px solid;
+  margin: 5px;
+  padding:5px 10px 5px 40px;
+  background-repeat: no-repeat;
+  /* background-position: 10px center; */
+  border-radius: 3px;
+}
